2011-02-16  Werner Koch  <wk@g10code.com>

	* benchmark.c (main): Add option --disable-hwf.

	* basic.c (DIM): New.
	(check_bulk_cipher_modes): New.
	(main): Run new test.

2011-02-15  Werner Koch  <wk@g10code.com>

	* benchmark.c: Add option --cipher-with-keysetup.
	(cipher_bench): Implement this option.

2011-02-14  Werner Koch  <wk@g10code.com>

	* benchmark.c: Add option --alignment.

2011-02-01  Werner Koch  <wk@g10code.com>

	* curves.c: New.

2011-01-04  Werner Koch  <wk@g10code.com>

	* Makefile.am (LDADD): Fix typo in last change.  Reported by
	Andrey Jivsov.

2010-07-19  Werner Koch  <wk@g10code.com>

	* Makefile.am (LDADD): Add GPG_ERROR_LIBS to help a new wannabe ld.

2010-06-10  Werner Koch  <wk@g10code.com>

	* t-mpi-bit.c (mpi2bitstr_nlz): Handle case for LENGTH==0.

2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)

	* basic.c (check_cbc_mac_cipher): Print more info.
	(main): Factor some code out to ...
	(check_cipher_modes): .. new.

2010-04-06  Brad Hards  <bradh@frogmouth.net>  (wk)

	* aeswrap.c, hmac.c, basic.c:  Typo fixes.

2010-03-26  Werner Koch  <wk@g10code.com>

	* basic.c (check_digests): Add tests for TIGER1 and TIGER2 from
	the NESSIE project.

2010-01-21  Werner Koch  <wk@g10code.com>

	* benchmark.c [_GCRYPT_IN_LIBGCRYPT]: Include libcompat.h.
	(start_timer, stop_timer) [__MINGW32CE__]: Use GetThreadTimes.
	* Makefile.am (LDADD): Add libcompat.

2009-12-10  Werner Koch  <wk@g10code.com>

	* basic.c (check_ctr_cipher): Add some return code checks.

	* benchmark.c (cipher_bench): Merge Stream with ECB column.

2009-12-09  Werner Koch  <wk@g10code.com>

	* aeswrap.c: New.

2009-07-09  Werner Koch  <wk@g10code.com>

	* benchmark.c (progress_cb): New.
	(main): Add option --progress.

2009-06-08  Werner Koch  <wk@g10code.com>

	* benchmark.c (cipher_bench): Center labels.  Suggested by Brad Hards.

2009-02-16  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (print_buffer): Remove parens from initializer for